--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,7 @@ blockquote {
   font-style: italic;
   margin: 0 0 1.5rem 0;
   padding: 0.375rem 0 0.375rem 1.5rem;
-  max-height: 5.25rem;
+  font-size: 18px;
   overflow: hidden;
   text-overflow: ellipsis;
   width: 500px;
