--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,7 +154,7 @@ blockquote {
   margin-left: 1.3rem;
 }
 
-#blog-structure{
+#blog-structure {
   width: 600px;
   padding-left: 2rem;
 }
@@ -1933,7 +1933,7 @@ input[type=submit]:disabled {
 @media screen and (max-width:480px) {
   #page-wrapper {
     padding: 0;
-    justify-content: center!important;
+    justify-content: center !important;
   }
 }
 
@@ -1990,6 +1990,25 @@ body.is-preload #wrapper {
     width: 200px;
     margin-bottom: 1rem
   }
+
+  .alert {
+    position: fixed;
+    width: auto !important;
+    top: 3rem;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
+
+  .alert_text {
+    margin-left: 2rem;
+  }
 }
 
 
@@ -1998,12 +2017,33 @@ body.is-preload #wrapper {
   #wrapper {
     width: 530px;
   }
-  .panel{
+
+  .panel {
     width: 100%;
   }
+
   .Languages {
     padding: 1.8rem 2rem 1.3875rem 2.5rem !important;
-}
+  }
+
+  .alert {
+    position: fixed;
+    width: auto !important;
+    top: 3rem;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
+
+  .alert_text {
+    margin-left: 2rem;
+  }
 }
 
 
@@ -2015,7 +2055,7 @@ body.is-preload #wrapper {
 
   .Languages {
     padding: .8875rem 2rem 1.3875rem 2.5rem !important;
-}
+  }
 
   body.is-preload #wrapper {
     -moz-transform: none;
@@ -2023,29 +2063,86 @@ body.is-preload #wrapper {
     -ms-transform: none;
     transform: none
   }
+
   #blog-structure {
     padding-left: 0;
-}
+  }
+
+  .alert {
+    position: fixed;
+    width: auto !important;
+    top: 3rem;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
 }
 
 @media screen and (max-width:420px) {
   #wrapper {
     width: 400px;
   }
-  .panel{
+
+  .panel {
     width: 100%;
   }
+
   .Languages {
     padding: .8875rem 2rem 1.3875rem 2.5rem !important;
-}
+  }
+
+  .alert {
+    position: fixed;
+    width: auto !important;
+    top: 3rem;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
+
+  .alert_text {
+    margin-left: 2rem;
+  }
 }
 
 @media screen and (max-width:380px) {
   #wrapper {
     width: 370px;
   }
-  .panel{
+
+  .panel {
     width: 100%;
+  }
+
+  .alert {
+    position: fixed;
+    width: auto !important;
+    top: 3rem;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
+
+  .alert_text {
+    margin-left: 2rem;
   }
 }
 
@@ -2053,11 +2150,32 @@ body.is-preload #wrapper {
   #wrapper {
     width: 350px;
   }
-  .panel{
+
+  .panel {
     width: 100%;
   }
-  blockquote{
-    width: 200px!important;
+
+  blockquote {
+    width: 200px !important;
+  }
+
+  .alert {
+    position: fixed;
+    width: auto !important;
+    top: 3rem;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
+
+  .alert_text {
+    margin-left: 2rem;
   }
 }
 
@@ -2065,13 +2183,34 @@ body.is-preload #wrapper {
   #wrapper {
     width: 320px;
   }
-  .panel{
+
+  .panel {
     width: 100%;
   }
-  blockquote{
-    width: 200px!important;
+
+  blockquote {
+    width: 200px !important;
   }
-  
+
+  .alert {
+    position: fixed;
+    top: 3rem;
+    width: auto !important;
+    right: 0 !important;
+    left: 0 !important;
+    padding: 10px;
+    background-color: #9e9e9e;
+    color: rgb(0, 0, 0) !important;
+    margin-bottom: 15px;
+    z-index: +1000 !important;
+    margin: 1rem;
+    margin-top: -1rem;
+  }
+
+  .alert_text {
+    margin-left: 2rem;
+  }
+
 }
 
 .transparent-icon:before {
@@ -2587,16 +2726,16 @@ a:hover {
 /* Mobile Fixes */
 @media screen and (max-width:736px) {
 
-  blockquote{
+  blockquote {
     width: 300px;
   }
 
   .animated-border {
 
-   
-    margin: 1rem!important;
-    margin-bottom: 1rem!important;
-  
+
+    margin: 1rem !important;
+    margin-bottom: 1rem !important;
+
   }
 
   canvas {
@@ -2929,53 +3068,70 @@ canvas {
 /* ---- animated-border ---- */
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
 
-	50% {
-		background-position: 100% 50%;
-	}
+  50% {
+    background-position: 100% 50%;
+  }
 
-	100% {
-		background-position: 0% 50%;
-	}
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .animated-border {
-  background: linear-gradient(
-    130deg, 
-  rgba(22, 31, 58, 0.316), 
-  rgba(85, 64, 179, 0.241), 
-  rgba(108, 161, 197, 0.282), 
-  rgba(95, 159, 242, 0.255), 
-  rgba(13, 44, 73, 0.59)
-  );
+  background: linear-gradient(130deg,
+      rgba(22, 31, 58, 0.316),
+      rgba(85, 64, 179, 0.241),
+      rgba(108, 161, 197, 0.282),
+      rgba(95, 159, 242, 0.255),
+      rgba(13, 44, 73, 0.59));
   animation: gradient 20s ease infinite;
-	background-size: 1000% 100% ;
-	padding: 5px 6px;
-	border-radius: 10px;
-	display: inline-block;
+  background-size: 1000% 100%;
+  padding: 5px 6px;
+  border-radius: 10px;
+  display: inline-block;
   margin-right: 1rem;
 }
 
-
 /* The alert message box */
 .alert {
-  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: fixed;
+  height: 100px;
+  width: 350px;
   left: 40rem;
   right: 40rem;
-  padding: 50px;
-  background-color: #641a14; /* Red */
-  color: white;
+  top: 3rem;
+  padding: 10px;
+  background-color: #9e9e9e;
   margin-bottom: 15px;
   z-index: +1;
+  border-radius: 10px;
 }
 
-/* The close button */
+.alert_text {
+  font-size: 15px !important;
+  color: rgb(0, 0, 0) !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+#warning_alert{
+  font-size: 16px!important;
+  color: rgb(0, 0, 0) !important;
+  font-weight: 900;
+}
+
 .closebtn {
   margin-left: 15px;
-  color: white;
+  color: rgb(0, 0, 0) !important;
   font-weight: bold;
   float: right;
   font-size: 22px;
@@ -2984,7 +3140,6 @@ canvas {
   transition: 0.3s;
 }
 
-/* When moving the mouse over the close button */
 .closebtn:hover {
   color: black;
 }
