--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3103,9 +3103,7 @@ canvas {
   justify-content: space-between;
   position: fixed;
   height: 100px;
-  width: 350px;
-  left: 40rem;
-  right: 40rem;
+  left: 35%;
   top: 3rem;
   padding: 10px;
   background-color: #9e9e9e;
