--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -5,23 +5,20 @@
 <meta name="keywords" content="Hydro, Security, DeFi, API, Fintech, Blockchain">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Project Hydro</title>
-
+<!-- Favicons -->
 {% include favicons.html %}
 <!-- Open Graph data -->
 <meta property="og:title" content="{% t page.title %}"/>
 <meta property="og:description" content="{% t page.description %}"/>
 <meta property="og:description" content="Hydro"/>
-
-<!-- Twitter -->
-  
-  <meta property="twitter:url" content="https://twitter.com/HydroBlockchain">
-  <meta property="twitter:title" content="Project Hydro">
-  <meta property="twitter:card" content="summary_large_image"><meta property="twitter:description" content="Hydro is the life of the new #decentralized global economy, Open-source #blockchain based #Identity linked #payments #DeFi | Stake $HDYRO on http://aegirwallet.org">
-  <meta property="twitter:image" content="https://pbs.twimg.com/profile_images/1358971770523381760/KY0MvdH4_400x400.jpg">
-
-
+<!-- Twitter -->  
+<meta property="twitter:url" content="https://twitter.com/HydroBlockchain">
+<meta property="twitter:title" content="Project Hydro">
+<meta property="twitter:card" content="summary_large_image"><meta property="twitter:description" content="Hydro is the life of the new #decentralized global economy, Open-source #blockchain based #Identity linked #payments #DeFi | Stake $HDYRO on http://aegirwallet.org">
+<meta property="twitter:image" content="https://pbs.twimg.com/profile_images/1358971770523381760/KY0MvdH4_400x400.jpg">
+<!-- Document -->
 <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
-
+<!-- Languages -->
 {% for lang in site.languages %}
   {% if site.default_lang == lang %}
     <link rel="alternate" href="{{ site.url }}{{ site.baseurl_root }}{{ page.url }}" hreflang="{{lang}}">
