--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2736,6 +2736,7 @@ canvas {
   .blockchain-specs {
     width: auto !important;
     align-items: center;
+    padding-top: 2rem;
   }
 
   .eth-specs,
