--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,7 +156,6 @@ blockquote {
 
 #blog-structure {
   width: 600px;
-  padding-left: 2rem;
 }
 
 html {
@@ -687,7 +686,14 @@ input[type=submit] {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  white-space: nowrap
+  white-space: nowrap;
+  width: 250px;
+    height: 50px;
+    display: flex;
+    align-text: center;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .button:hover,
@@ -1622,7 +1628,7 @@ textarea.fcf-form-control {
   font-family: 'Roboto', sans-serif;
   background: #a9a9a9;
   height: 100%;
-  width: 250px
+  width: 100%;
 }
 
 textarea {
@@ -1794,7 +1800,7 @@ a:hover {
 
 .button-contact-us {
   background: #2e2e2e !important;
-  margin: .5rem
+  margin: .5rem;
 }
 
 .row-flex {
@@ -1916,6 +1922,10 @@ a:hover {
 }
 
 /* Multichains-section */
+
+#multichain-initial{
+  padding-right: 2rem;
+}
 
 .tokenomics {
   display: flex;
@@ -2688,6 +2698,10 @@ canvas {
 
 @media screen and (max-width:736px) {
 
+  .button-contact-us {
+    width: 100px;
+  }
+
   #eth-logo, #bsc-logo, #dot-logo, #ada-logo, #algo-logo {
     width: 50px;
     height: auto;
@@ -2699,6 +2713,7 @@ canvas {
 
   blockquote {
     width: 300px;
+    font-size: 97%;
   }
 
   .animated-border {
@@ -2998,7 +3013,7 @@ canvas {
   }
 
   #blog-structure {
-    padding-left: 0;
+    padding-left: 38.775px;
   }
 
   .alert {
@@ -3054,6 +3069,9 @@ canvas {
 }
 
 @media screen and (max-width:380px) {
+  .spec-sheet{
+    font-size: 97%!important;
+  }
 
   #wrapper {
     width: 370px;
@@ -3085,6 +3103,10 @@ canvas {
 }
 
 @media screen and (max-width:350px) {
+
+  .spec-sheet{
+    font-size: 75%!important;
+  }
 
   #wrapper {
     width: 350px;
@@ -3120,6 +3142,10 @@ canvas {
 }
 
 @media screen and (max-width:320px) {
+ 
+  .spec-sheet{
+    font-size: 70%!important;
+  }
 
   #wrapper {
     width: 320px;
