--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,29 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
-a,
-b,
-body,
-center,
-div,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-header,
-html,
-i,
-img,
-label,
-li,
-p,
-q,
-s,
-section,
-span,
-ul {
+a, b, body, center, div, form, h1, h2, h3, h4, h5, h6, header, html, i, img, label, li, p, q, s, section, span, ul {
   margin: 0;
   padding: 0;
   border: 0;
@@ -33,8 +10,7 @@ ul {
   color: rgb(186, 186, 186) !important
 }
 
-header,
-section {
+header, section {
   display: block
 }
 
@@ -50,8 +26,7 @@ q {
   quotes: none
 }
 
-q:after,
-q:before {
+q:after, q:before {
   content: "";
   content: none
 }
@@ -65,77 +40,11 @@ input::-moz-focus-inner {
   padding: 0
 }
 
-input,
-select,
-textarea {
+input, select, textarea {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none
-}
-
-@-moz-keyframes load-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
-}
-
-@-webkit-keyframes load-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
-}
-
-@-ms-keyframes load-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
-}
-
-@keyframes load-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
 }
 
 blockquote {
@@ -167,9 +76,7 @@ html {
   box-sizing: border-box
 }
 
-*,
-:after,
-:before {
+*, :after, :before {
   box-sizing: inherit
 }
 
@@ -193,34 +100,6 @@ body {
   overflow: hidden
 }
 
-body:before {
-  -moz-animation: load-spinner 1s infinite linear;
-  -webkit-animation: load-spinner 1s infinite linear;
-  -ms-animation: load-spinner 1s infinite linear;
-  animation: load-spinner 1s infinite linear;
-  -moz-transition: opacity .25s ease;
-  -webkit-transition: opacity .25s ease;
-  -ms-transition: opacity .25s ease;
-  transition: opacity .25s ease;
-  -moz-transition-delay: 0s;
-  -webkit-transition-delay: 0s;
-  -ms-transition-delay: 0s;
-  transition-delay: 0s;
-  pointer-events: none;
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 4rem;
-  height: 4rem;
-  margin: -2rem 0 0 -2rem;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='96px' height='96px' viewBox='0 0 96 96' zoomAndPan='disable'%3E%3Cstyle%3Ecircle %7Bfill: transparent%3B stroke: %232e2b37%3B stroke-width: 1.5px%3B %7D%3C/style%3E%3Cdefs%3E%3CclipPath id='corner'%3E%3Cpolygon points='0,0 48,0 48,48 96,48 96,96 0,96' /%3E%3C/clipPath%3E%3C/defs%3E%3Cg clip-path='url(%23corner)'%3E%3Ccircle cx='48' cy='48' r='32'/%3E%3C/g%3E%3C/svg%3E");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 4rem;
-  opacity: 0
-}
 
 body:after {
   pointer-events: none;
@@ -235,9 +114,7 @@ body:after {
   background-color: #222
 }
 
-body.is-preload *,
-body.is-preload :after,
-body.is-preload :before {
+body.is-preload *, body.is-preload :after, body.is-preload :before {
   -moz-animation: none !important;
   -webkit-animation: none !important;
   -ms-animation: none !important;
@@ -260,10 +137,7 @@ body.is-preload:before {
   opacity: .25
 }
 
-body,
-input,
-select,
-textarea {
+body, input, select, textarea {
   color: rgba(255, 255, 255, .75);
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
@@ -297,12 +171,7 @@ body.is-ie p {
   width: 100%
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   color: rgba(255, 255, 255, .875);
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
@@ -311,12 +180,7 @@ h6 {
   letter-spacing: -.05em
 }
 
-h1 a,
-h2 a,
-h3 a,
-h4 a,
-h5 a,
-h6 a {
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: inherit;
   text-decoration: none
 }
@@ -376,12 +240,7 @@ label {
   margin: 0 0 .4875rem 0
 }
 
-input[type=email],
-input[type=password],
-input[type=tel],
-input[type=text],
-select,
-textarea {
+input[type=email], input[type=password], input[type=tel], input[type=text], select, textarea {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -397,21 +256,11 @@ textarea {
   width: 100%
 }
 
-input[type=email]:invalid,
-input[type=password]:invalid,
-input[type=tel]:invalid,
-input[type=text]:invalid,
-select:invalid,
-textarea:invalid {
+input[type=email]:invalid, input[type=password]:invalid, input[type=tel]:invalid, input[type=text]:invalid, select:invalid, textarea:invalid {
   box-shadow: none
 }
 
-input[type=email]:focus,
-input[type=password]:focus,
-input[type=tel]:focus,
-input[type=text]:focus,
-select:focus,
-textarea:focus {
+input[type=email]:focus, input[type=password]:focus, input[type=tel]:focus, input[type=text]:focus, select:focus, textarea:focus {
   border-color: #ffe4b4
 }
 
@@ -443,10 +292,7 @@ select::-ms-expand {
   display: none
 }
 
-input[type=email],
-input[type=password],
-input[type=text],
-select {
+input[type=email], input[type=password], input[type=text], select {
   height: 2.5rem
 }
 
@@ -454,8 +300,7 @@ textarea {
   padding: .75rem 1rem
 }
 
-input[type=checkbox],
-input[type=radio] {
+input[type=checkbox], input[type=radio] {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -468,8 +313,7 @@ input[type=radio] {
   z-index: -1
 }
 
-input[type=checkbox]+label,
-input[type=radio]+label {
+input[type=checkbox]+label, input[type=radio]+label {
   text-decoration: none;
   position: relative;
   color: rgba(255, 255, 255, .75);
@@ -482,8 +326,7 @@ input[type=radio]+label {
   padding-right: 1rem
 }
 
-input[type=checkbox]+label:before,
-input[type=radio]+label:before {
+input[type=checkbox]+label:before, input[type=radio]+label:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   display: inline-block;
@@ -496,8 +339,7 @@ input[type=radio]+label:before {
   font-weight: 900
 }
 
-input[type=checkbox]+label:before,
-input[type=radio]+label:before {
+input[type=checkbox]+label:before, input[type=radio]+label:before {
   content: "";
   display: inline-block;
   font-size: .8rem;
@@ -514,26 +356,22 @@ input[type=radio]+label:before {
   text-align: center
 }
 
-body.is-ie input[type=checkbox]+label:before,
-body.is-ie input[type=radio]+label:before {
+body.is-ie input[type=checkbox]+label:before, body.is-ie input[type=radio]+label:before {
   line-height: 1.5
 }
 
-input[type=checkbox]:checked+label:before,
-input[type=radio]:checked+label:before {
+input[type=checkbox]:checked+label:before, input[type=radio]:checked+label:before {
   content: "\f00c";
   background: rgba(255, 255, 255, .875);
   border-color: rgba(255, 255, 255, .875)
 }
 
-input[type=checkbox]:focus+label:before,
-input[type=radio]:focus+label:before {
+input[type=checkbox]:focus+label:before, input[type=radio]:focus+label:before {
   border-color: #ffe4b4;
   box-shadow: 0 0 0 1px #ffe4b4
 }
 
-input[type=checkbox]:focus:checked+label:before,
-input[type=radio]:focus:checked+label:before {
+input[type=checkbox]:focus:checked+label:before, input[type=radio]:focus:checked+label:before {
   background: #ffe4b4
 }
 
@@ -600,7 +438,6 @@ input[type=radio]+label:before {
   font-family: "Font Awesome 5 Brands"
 }
 
-
 ul {
   margin: 0 0 1.5rem 0
 }
@@ -640,7 +477,6 @@ ul.contact-icons>li:before {
   height: 2.25rem;
   line-height: 2.25rem;
   border-radius: 2.25rem;
-  background-color: #7db5d2;
   color: #2e2b37;
   cursor: default;
   font-size: 1.125rem;
@@ -657,11 +493,7 @@ ul.contact-icons>li a {
   border-bottom: 0
 }
 
-.button,
-button,
-input[type=button],
-input[type=reset],
-input[type=submit] {
+.button, button, input[type=button], input[type=reset], input[type=submit] {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -688,36 +520,23 @@ input[type=submit] {
   text-transform: uppercase;
   white-space: nowrap;
   width: 250px;
-    height: 50px;
-    display: flex;
-    align-text: center;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+  height: 50px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
-.button:hover,
-button:hover,
-input[type=button]:hover,
-input[type=reset]:hover,
-input[type=submit]:hover {
+.button:hover, button:hover, input[type=button]:hover, input[type=reset]:hover, input[type=submit]:hover {
   background: #212121;
   color: #fff !important
 }
 
-.button:active,
-button:active,
-input[type=button]:active,
-input[type=reset]:active,
-input[type=submit]:active {
+.button:active, button:active, input[type=button]:active, input[type=reset]:active, input[type=submit]:active {
   background-color: rgba(255, 228, 180, .125)
 }
 
-.button.icon:before,
-button.icon:before,
-input[type=button].icon:before,
-input[type=reset].icon:before,
-input[type=submit].icon:before {
+.button.icon:before, button.icon:before, input[type=button].icon:before, input[type=reset].icon:before, input[type=submit].icon:before {
   display: inline-block;
   position: relative;
   top: -.075rem;
@@ -726,78 +545,10 @@ input[type=submit].icon:before {
   margin: 0 .375rem 0 -.325rem
 }
 
-.button:disabled,
-button:disabled,
-input[type=button]:disabled,
-input[type=reset]:disabled,
-input[type=submit]:disabled {
+.button:disabled, button:disabled, input[type=button]:disabled, input[type=reset]:disabled, input[type=submit]:disabled {
   pointer-events: none;
   cursor: default;
   opacity: .5
-}
-
-@-moz-keyframes gallery-modal-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
-}
-
-@-webkit-keyframes gallery-modal-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
-}
-
-@-ms-keyframes gallery-modal-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
-}
-
-@keyframes gallery-modal-spinner {
-  0% {
-    -moz-transform: rotate(0);
-    -webkit-transform: rotate(0);
-    -ms-transform: rotate(0);
-    transform: rotate(0)
-  }
-
-  100% {
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg)
-  }
 }
 
 .panel {
@@ -1499,7 +1250,6 @@ label {
 .button-da {
   border-bottom: none;
   background: 0 0;
-  color: #7db5d2;
   padding-left: 10px;
 }
 
@@ -1523,10 +1273,7 @@ label {
   border-radius: 0.5rem !important;
 }
 
-#overlayContactUs,
-#overlayMist,
-#overlayRaindrop,
-#overlayDocs {
+#overlayContactUs, #overlayMist, #overlayRaindrop, #overlayDocs {
   position: fixed;
   display: none;
   width: 100%;
@@ -1539,9 +1286,7 @@ label {
   cursor: pointer
 }
 
-#text-mist,
-#text-raindrop,
-#text-Docs {
+#text-mist, #text-raindrop, #text-Docs {
   background: #131313 !important;
   color: #fff !important;
   padding: 1rem;
@@ -1557,7 +1302,6 @@ label {
 .wrapper-privacy {
   height: 50rem auto !important;
   width: 100rem auto !important;
-
 }
 
 .privacy-step {
@@ -1585,7 +1329,6 @@ label {
 .fcf-form-group {
   margin: .5rem;
   background: 0 0 !important;
-  color: #00324e !important
 }
 
 .fcf-input-group {
@@ -1599,10 +1342,6 @@ label {
   width: 100%
 }
 
-.fcf-form-class {
-  color: #00324e !important
-}
-
 .fcf-form-control {
   display: block;
   width: 100%;
@@ -1612,16 +1351,10 @@ label {
   font-weight: 400;
   line-height: 1.5;
   color: #000;
-  background-color: #7db5d2;
   background-clip: padding-box;
-  border: 1px solid #00324e;
   outline: 0;
   border-radius: .25rem;
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
-}
-
-.fcf-form-control:focus {
-  border: 1px solid #00324e
 }
 
 textarea.fcf-form-control {
@@ -1667,16 +1400,13 @@ label.fcf-label {
 .fcf-credit {
   padding-top: 10px;
   font-size: .9rem;
-  color: #00324e
 }
 
 .fcf-credit a {
-  color: #00324e;
   text-decoration: underline
 }
 
 .fcf-credit a:hover {
-  color: #0056b3;
   text-decoration: underline
 }
 
@@ -1923,7 +1653,7 @@ a:hover {
 
 /* Multichains-section */
 
-#multichain-initial{
+#multichain-initial {
   padding-right: 2rem;
 }
 
@@ -1956,7 +1686,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
 }
 
 .blockchains {
@@ -1976,11 +1706,7 @@ a:hover {
   margin-bottom: 1px;
 }
 
-.eth-specs,
-.bsc-specs,
-.dot-specs,
-.ada-specs,
-.algo-specs {
+.eth-specs, .bsc-specs, .dot-specs, .ada-specs, .algo-specs {
   color: white !important;
   width: 450px;
   display: flex;
@@ -1989,11 +1715,7 @@ a:hover {
   z-index: 1 !important;
 }
 
-#eth-logo,
-#bsc-logo,
-#dot-logo,
-#ada-logo,
-#algo-logo {
+#eth-logo, #bsc-logo, #dot-logo, #ada-logo, #algo-logo {
   width: 100px;
   height: auto;
 }
@@ -2160,12 +1882,7 @@ canvas {
     font-size: .7rem
   }
 
-  h1 br,
-  h2 br,
-  h3 br,
-  h4 br,
-  h5 br,
-  h6 br {
+  h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
     display: none
   }
 }
@@ -2184,8 +1901,7 @@ canvas {
 
 @media screen and (max-width:480px) {
 
-  body,
-  html {
+  body, html {
     min-width: 320px
   }
 }
@@ -2705,9 +2421,10 @@ canvas {
   #eth-logo, #bsc-logo, #dot-logo, #ada-logo, #algo-logo {
     width: 50px;
     height: auto;
-}
-  .spec-sheet{
-    font-size: 80%!important;
+  }
+
+  .spec-sheet {
+    font-size: 80% !important;
     padding-bottom: 2rem;
   }
 
@@ -2754,18 +2471,13 @@ canvas {
     padding-top: 2rem;
   }
 
-  .eth-specs,
-  .bsc-specs,
-  .dot-specs,
-  .ada-specs,
-  .algo-specs {
+  .eth-specs, .bsc-specs, .dot-specs, .ada-specs, .algo-specs {
     width: auto !important;
     margin: 0 !important;
     padding: 0.5rem !important;
   }
 
-  .da-name,
-  .da-position {
+  .da-name, .da-position {
     font-size: 14px !important;
   }
 
@@ -3069,8 +2781,8 @@ canvas {
 }
 
 @media screen and (max-width:380px) {
-  .spec-sheet{
-    font-size: 97%!important;
+  .spec-sheet {
+    font-size: 97% !important;
   }
 
   #wrapper {
@@ -3104,8 +2816,8 @@ canvas {
 
 @media screen and (max-width:350px) {
 
-  .spec-sheet{
-    font-size: 75%!important;
+  .spec-sheet {
+    font-size: 75% !important;
   }
 
   #wrapper {
@@ -3142,9 +2854,9 @@ canvas {
 }
 
 @media screen and (max-width:320px) {
- 
-  .spec-sheet{
-    font-size: 70%!important;
+
+  .spec-sheet {
+    font-size: 70% !important;
   }
 
   #wrapper {
